
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int bound_buf ;


 int BOUNSIZE ;
 int MSGBOUNDARY ;
 int PRINTINFO (int ,int ) ;
 int bzero (char*,int) ;
 int debug ;
 int rand () ;
 int sprintf (char*,char*,int,int,int) ;
 int srand (unsigned int) ;
 scalar_t__ time (int *) ;

char *make_random_boundary(void)
 {
        PRINTINFO(MSGBOUNDARY,debug);
        char bound_buf[BOUNSIZE];
        char *p;
        p = bound_buf;
        srand((unsigned) time(((void*)0)));

         bzero(bound_buf,sizeof(bound_buf));
         sprintf(bound_buf,"---------------------------%04X%04X%04X",rand(),rand(),rand());
         return(p);
 }
