; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_805.c_make_random_boundary.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_805.c_make_random_boundary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSGBOUNDARY = common dso_local global i32 0, align 4
@debug = common dso_local global i32 0, align 4
@BOUNSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"---------------------------%04X%04X%04X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @make_random_boundary() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = load i32, i32* @MSGBOUNDARY, align 4
  %5 = load i32, i32* @debug, align 4
  %6 = call i32 @PRINTINFO(i32 %4, i32 %5)
  %7 = load i32, i32* @BOUNSIZE, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %1, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %2, align 8
  store i8* %10, i8** %3, align 8
  %11 = call i64 @time(i32* null)
  %12 = trunc i64 %11 to i32
  %13 = call i32 @srand(i32 %12)
  %14 = trunc i64 %8 to i32
  %15 = call i32 @bzero(i8* %10, i32 %14)
  %16 = call i32 (...) @rand()
  %17 = call i32 (...) @rand()
  %18 = call i32 (...) @rand()
  %19 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %17, i32 %18)
  %20 = load i8*, i8** %3, align 8
  %21 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %21)
  ret i8* %20
}

declare dso_local i32 @PRINTINFO(i32, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @srand(i32) #1

declare dso_local i64 @time(i32*) #1

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @rand(...) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
